[tool.poetry]
name = "logana"
version = "0.1.0"
description = "Streaming log analytics engine with uncertainty-aware parsing"
readme = "README.md"
license = "MIT"
authors = ["logana contributors"]
packages = [{ include = "logana", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
click = ">=8.1"
rich = ">=13.0"
tzdata = ">=2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"

[tool.poetry.scripts]
logana = "logana.cli.cliMain:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
python_files = ["test*.py"]
python_functions = ["test_*"]
